src/livecodes/styles/app.scss
/* ... */
.result {
  #toolbar {
    display: none;
  }

  #overlay {
    background-color: white;
    opacity: 1 !important;
  }

  #modal {
    display: none !important;
  }

  #result-mode-drawer {
    align-items: center;
    background-color: rgb(250, 251, 255);
    border: 0.5px solid rgb(233, 235, 237);
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    bottom: 0;
    box-shadow: rgba(0, 0, 0, 0.1) 0 0 6px;
    box-sizing: border-box;
    display: flex;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    height: 42px;
    justify-content: space-between;
    left: 50%;
    padding: 6px;
    padding-left: 0;
    position: absolute;
    transform: translateX(-50%);
    transition: transform 0.4s ease-in-out;
    width: 250px;

    &.hidden {
      transform: translateX(-50%) translateY(44px);
    }

    a {
      align-items: center;
      border-top-left-radius: 6px;
      color: rgb(77, 86, 95);
      display: flex;
      flex-grow: 1;
      gap: 10px;
      height: 42px;
      justify-content: center;
      text-decoration: none;

      &:hover {
        background-color: rgb(246, 246, 247);
      }

      &::after {
        background: #e9ebed;
        content: '';
        height: 26px;
        position: absolute;
        right: 41px;
        top: 8px;
        width: 1px;
      }
    }

    #drawer-logo {
      align-items: center;
      display: flex;
      justify-content: center;

      img {
        height: 20px;
      }
    }

    #drawer-text {
      font-size: 14px;
      font-weight: 600;
      line-height: 20px;

      svg {
        display: inline-block;
        fill: rgb(119, 128, 137);
        height: 12px;
        transform: translateX(2px) translateY(2px);
      }
    }

    #drawer-close {
      align-items: center;
      background-color: transparent;
      border: 0;
      cursor: pointer;
      display: flex;
      height: 30px;
      justify-content: center;
      margin-left: 5px;
      width: 30px;

      &:hover {
        background-color: rgb(246, 246, 247);
      }

      svg {
        height: 14px;
      }
    }
  }
}

#editor-container {
  display: flex;
  flex-direction: row;
  height: calc(100% - var(--toolbar-height));
}

.layout-vertical {
  #editor-container {
    flex-direction: column;

    .gutter #size-label {
      left: 5px !important;
      top: 15px !important;
    }
  }

  .gutter.gutter-vertical {
    height: 4px;

    #handle {
      transform: rotate(90deg);
    }
  }
}

@media only screen and (max-width: 480px) {
  #toolbar {
    align-items: flex-start;
    display: flex;
    height: calc(var(--toolbar-height) * 2 - var(--s4));

    .toolbar-render {
      justify-content: space-between;
      place-items: center;
    }

    #select-editor {
      inset-inline-start: 0; /* left */
      max-width: unset;
      position: absolute;
      top: var(--toolbar-height);

      .editor-title > span {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    #light-theme-button,
    #dark-theme-button {
      display: none;
    }

    #login-link,
    #logout-link {
      height: 100%;
    }
  }

  #editor-container {
    height: calc(100% - var(--toolbar-height) * 2);
  }

  #modal {
    .modal-search {
      i.icon-calendar-sort,
      i.icon-arrow-text-sort {
        display: inline-block !important;
      }
    }
  }

  .layout-vertical {
    .tool-buttons#editor-tools {
      display: none;
    }
  }
}

#editors {
  background: var(--gutter-split-bg-color);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-end;
  overflow: hidden;
  position: relative;
  top: 0;

  > .editor {
    font-variant-ligatures: discretionary-ligatures;
    visibility: hidden;
  }

  > div {
    flex-grow: 1;
    min-height: var(--s32);
    position: relative;
    width: 100%;
  }

  .custom-editor {
    background-color: var(--custom-editor-background-color);
    display: none;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 10;

    > iframe {
      border: 0;
      height: 100%;
      left: 0;
      margin: 0;
      padding: 0;
      position: absolute;
      top: 0;
      width: 100%;
    }

    .loading-custom-editor {
      color: var(--custom-editor-loading-color);
      margin: 1em;
    }
  }
}

.tool-buttons {
  background: var(--toolbar-bg-color);
  height: var(--toolspane-bar-height);

  &.hidden {
    display: none;
  }

  > button,
  > span {
    align-items: center;
    background: var(--btn-bg-color);
    border: var(--btn-border);
    border-radius: var(--btn-border-radius);
    color: var(--btn-color);
    cursor: pointer;
    display: inline-flex;
    font-size: var(--font-size); // todo text vs icon size ??
    height: var(--btn-height, 26px);
    justify-content: center;
    margin: 3px;
    min-width: 32px;
    position: relative;

    &.text {
      align-items: center;
      display: flex;
      font-size: var(--s12);
      height: var(--btn-height, 26px);
      justify-content: center;
    }

    svg {
      margin: 4px auto;
    }

    &:hover,
    &:active,
    &.active {
      background: var(--btn-bg-active);
      color: var(--btn-active);
    }

    &.disabled {
      opacity: var(--disabled);
    }
  }

  &#editor-tools {
    align-items: center;
    display: flex;
    flex-grow: 0;

    #editor-status {
      background-color: transparent;
      display: flex;
      flex-grow: 1;
      font-size: var(--s12);
      justify-content: flex-start;
      white-space: nowrap;

      > span {
        margin: auto 4px;
      }
    }
  }
}

.tool-buttons .active .mark,
.tools-pane-title.has-mark .mark {
  border: 4px solid var(--editor-tools-mark-color);
  border-radius: 4px;
  bottom: 3px;
  display: inline-block;
  position: absolute;
  right: 3px;
}

@media only screen and (max-width: 768px) {
  #copy-as-url-btn,
  #editor-status {
    display: none;
  }
}
/* ... */

